# wheel-patcher

./: .gitignore  README.md  noxfile.py  pyproject.toml
src/wheel_patcher/: __init__.py  __main__.py  cli.py  patcher.py  record.py  utils.py
tests/: __init__.py  test_patcher.py  test_record.py
tests/fixtures/: requests-2.32.5-py3-none-any-patched.whl
